[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/ghost_anim.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/arrow.png" type="Texture" id=3]
[ext_resource path="res://sprites/ghost_scare_anim.png" type="Texture" id=4]
[ext_resource path="res://sprites/scared.png" type="Texture" id=5]
[ext_resource path="res://sprites/light_circle.png" type="Texture" id=6]
[ext_resource path="res://sounds/depossess.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/possess.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/scare2.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/dash.wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.00412
height = 0.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Ghost:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Ghost:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D/Scared:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D/Ghost:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 1, 0.196078 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScaringArea/Light2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Ghost:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Ghost:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D/Scared:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D/Scared:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ), Vector2( 0, -6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D/Ghost:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0, 1, 0.784314 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ScaringArea/Light2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="player" type="KinematicBody2D"]
collision_layer = 524288
collision_mask = 2147484165
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Ghost" type="Sprite" parent="CollisionShape2D"]
self_modulate = Color( 1, 0, 1, 0.784314 )
position = Vector2( 0, -1 )
z_index = 1
texture = ExtResource( 4 )
hframes = 2

[node name="Scared" type="Sprite" parent="CollisionShape2D"]
self_modulate = Color( 1, 0, 1, 1 )
position = Vector2( 0, -8 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 5 )

[node name="Arrow" type="Position2D" parent="."]

[node name="Arrow" type="Sprite" parent="Arrow"]
position = Vector2( 30, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="PossessionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PossessionArea"]
position = Vector2( 0, 1 )
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="ScaringArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScaringArea"]
scale = Vector2( 10, 10 )
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="ScaringArea"]
visible = false
scale = Vector2( 15, 15 )
z_index = -1
texture = ExtResource( 6 )
shadow_enabled = true

[node name="ScaringTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )
anims/scare = SubResource( 4 )

[node name="RayCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 8

[node name="Audio" type="Node2D" parent="."]

[node name="Possess" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 8 )

[node name="Dash" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 10 )

[node name="Depossess" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 7 )

[node name="Scare" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 9 )
[connection signal="body_entered" from="PossessionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ScaringTimer" to="." method="_on_Timer_timeout"]
